updates to server storage
